Update VITE_API_BASE_URL to point to the production backend

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 # We weten het, dit moet hidden zijn. Maar voor dit school project kan het gewoon probleemloos zichtbaar zijn.
-VITE_API_BASE_URL=http://localhost:3000
+VITE_API_BASE_URL=https://afspraakplanner-backend-csa4c8h0fcc6d9cy.westeurope-01.azurewebsites.net
