Remove fallback message from build step in backend deployment workflow

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -25,7 +25,7 @@ jobs:
           npm run generate
           npm run migrate
           npm run seed
-          npm run build || echo "No build step"
+          npm run build
 
       - name: Azure Login
         uses: azure/login@v1
