--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "prisma": "^6.6.0"
@@ -33,6 +34,7 @@
     "@types/express": "^5.0.1",
     "@types/express-session": "1.15.16",
     "@types/node": "^22.14.1",
+    "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
