--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,13 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "redux-persist": "^6.0.0"
@@ -27,6 +31,7 @@
     "@eslint/js": "^9.22.0",
     "@tailwindcss/cli": "^4.1.7",
     "@tailwindcss/postcss": "^4.1.7",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
