--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -35,9 +35,14 @@ jobs:
       - name: Log backend contents
         run: ls -R backend
 
+      - name: Move build output and web.config to root
+        run: |
+          cp backend/web.config .
+          cp -r backend/dist .
+
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
           app-name: afspraakplanner-backend
           slot-name: production
-          package: backend
+          package: .
