--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "@types/passport-local": "^1.0.38",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "4.18.2",
     "express-session": "^1.18.1",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
@@ -37,5 +37,8 @@
     "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
