Fix deployment package path in backend workflow

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           app-name: afspraakplanner-backend
           slot-name: production
-          package: backend
+          package: backend/
