--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
     "migrate": "prisma migrate dev",
     "generate": "prisma generate"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
@@ -23,7 +26,7 @@
     "@types/passport-local": "^1.0.38",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "express-session": "^1.18.1",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
@@ -31,7 +34,7 @@
     "prisma": "^6.6.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.1",
+    "@types/express": "^4.17.21",
     "@types/express-session": "1.15.16",
     "@types/node": "^22.14.1",
     "@types/nodemailer": "^6.4.17",
