--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           app-name: afspraakplanner-frontend
           slot-name: production
-          package: Frontend
+          package: frontend/dist
