Add web.config for URL rewriting to support React Router

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -24,6 +24,10 @@ jobs:
           npm install
           npm run build
 
+      - name: Copy web.config to build output
+        run: |
+          cp frontend/web.config frontend/dist/web.config
+
       - name: Azure Login
         uses: azure/login@v1
         with:
